[package]
name = "send_token_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-transaction-status = "1.18.26"
spl-associated-token-account = "2.0.0"
spl-token = "4.0"
borsh = "0.9.3"
clap = { version = "4.0", features = ["derive"] }

